# video-capture-share

./: .gitignore  Cargo.toml  README.md
src/: audio.rs  capture.rs  config.rs  frame.rs  h264_encoder.rs  i18n.rs  main.rs  perf.rs  preview.rs  relay.rs  settings.rs  video_stream.rs
