[package]
name = "vicash"
version = "0.1.0"
edition = "2021"
authors = ["caaatto"]
license = "MIT"
description = "vicash: low overhead capture card preview and LAN relay for streamers"
repository = "https://github.com/caaatto/vicash"
build = "build.rs"

[[bin]]
name = "vicash"
path = "src/main.rs"

[dependencies]
anyhow = "1"
bytemuck = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
cpal = "0.15"
dialoguer = { version = "0.11", default-features = false }
egui = "0.30"
egui-wgpu = "0.30"
egui-winit = { version = "0.30", default-features = false, features = ["links"] }
nokhwa = { version = "0.10", features = ["input-msmf", "input-native"] }
pollster = "0.4"
ringbuf = "0.4"
wgpu = "23"
winit = "0.30"
tiny_http = "0.12"
turbojpeg = { version = "1", optional = true }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
parking_lot = "0.12"
log = "0.4"
env_logger = "0.11"

[features]
default = []
fast-jpeg = ["turbojpeg"]

[build-dependencies]
tiny-skia = "0.11"
image = { version = "0.25", default-features = false, features = ["png"] }
ico = "0.4"
ab_glyph = "0.2"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"
